--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,14 @@
     "**/.factorypath": true,
     "**/*~": true
   },
+  "java.completion.importOrder": [
+    "#",
+    "frc.robot",
+    "java",
+    "org.victorrobotics.dtlib",
+    "edu.wpi.first",
+    ""
+  ],
   "java.test.config": [
     {
       "name": "WPIlibUnitTests",
@@ -25,5 +33,6 @@
       }
     },
   ],
-  "java.test.defaultConfig": "WPIlibUnitTests"
+  "java.test.defaultConfig": "WPIlibUnitTests",
+  "java.format.settings.url": "java-formatter.xml"
 }
